# aidlc-workflows

./: .gitignore  .markdownlint-cli2.yaml  CLAUDE.md  PROJECT.md  pyproject.toml  run.sh
.claude/: settings.json
.github/workflows/: auto-merge.yml  check-crawler.yml  check-embedder.yml  ci.yml  run-crawler.yml  run-embedder.yml  sample-crawl-content.yml  test-rag-handler.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: u-01-code-generation-plan.md  u-01-functional-design-plan.md  u-01-infrastructure-design-plan.md  u-01-nfr-design-plan.md  u-01-nfr-requirements-plan.md  u-02-code-generation-plan.md  u-02-functional-design-plan.md  u-02-infrastructure-design-plan.md  u-02-nfr-design-plan.md  u-02-nfr-requirements-plan.md  (+13 more)
aidlc-docs/inputs/: technical-environment-document.md  vision-document.md
aidlc-docs/operations/: ci-cd-guide.md  connect-setup-guide.md
chat-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
chat-ui/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
scripts/: backfill_titles.py  dedup_http_duplicates.py  purge_expired_campaigns.py  purge_non_html.py
scripts/rag_eval/: README.md  evaluate.py  inspect_retrieval.py  judge_eval.py  questions.json
src/chat_api/: __init__.py  app.py
src/common/: __init__.py  bedrock_client.py  errors.py  ja_pii_patterns.py  pii_masker.py
src/crawler/: differ.py  handler.py  parser.py  robots.py  s3_store.py  state_store.py
src/dashboard_api/: __init__.py  handler.py  metrics_aggregator.py
src/improvement_generator/: __init__.py  contact_lens_analyzer.py  gap_analyzer.py  suggestion_generator.py
src/profile/: __init__.py  crm_writer.py  handler.py  hasher.py
src/rag_handler/: escalation.py  handler.py  personalizer.py
src/session_manager/: channel_switch.py  csat_handler.py  history.py
src/vector_store/: handler.py  searcher.py  store.py  vector_cache_store.py
(+108 files in other folders)
